--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:theme="@style/Theme.LoginRegister"
         android:usesCleartextTraffic="true">
         <activity
+            android:name=".Settings"
+            android:exported="false" />
+        <activity
             android:name=".FriendList"
             android:exported="false" />
         <activity
